# allocation-agent-workflow-service

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md
node_agent/: apply.mjs  package-lock.json  package.json
scripts/: fixture_server.py  run_beat.sh  run_worker.sh
src/allocation_agent/: __init__.py  celery_app.py  cli.py  config.py  schemas.py  simulation.py  worker.py
src/allocation_agent/fixtures/: local-fixture-jobs.json  mock-dover-jobs.json
src/allocation_agent/integrations/: __init__.py  allocation_crawler.py  finder.py
src/allocation_agent/integrations/slug_sources/: __init__.py  base.py  google_search.py  hn_posts.py  linkedin.py  other.py
src/allocation_agent/sources/: __init__.py  base.py  crawler.py  dover.py
src/allocation_agent/stores/: feedback.py
src/allocation_agent/tasks/: apply.py  feedback.py  select.py  slug_discovery.py
src/allocation_agent/web/: __init__.py  dashboard.py
tests/: conftest.py  test_allocation_crawler_map.py  test_api.py  test_applications_ledger.py  test_apply.py  test_apply_node.py  test_celery_eager.py  test_cli.py  test_crawler_http.py  test_dover.py  test_feedback_store.py  test_feedback_tasks.py  test_integration_allocation_finder_e2e.py  test_simulation.py  test_slug_discovery.py  test_sources.py
