[project]
name = "allocation-agent"
version = "0.1.0"
description = "Celery-based job-application agent pipeline"
requires-python = ">=3.11"
dependencies = [
    "celery[redis]>=5.4",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "click>=8.1",
    "structlog>=24.1",
    "sqlalchemy>=2.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
allocation-agent = "allocation_agent.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/allocation_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
